--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
     "version": 2,
     "builds": [
-        {"src": "./app.py", "use": "vercel/python"}
+        {"src": "src/index.py", "use": "@vercel/python"}
     ],
-    "routes": [
-        {"src": "/(.*)","dest":"/"}
-    ]
+    "routes": [{"src": "/(.*)", "dest": "src/index.py"}]
 }
